--- a/style/scss/scss-component/_header.scss
+++ b/style/scss/scss-component/_header.scss
@@ -15,7 +15,7 @@ header {
     .logo {
         width: 49px;
         height: 24px;
-        background: url(/img/logo.svg) center center no-repeat;
+        background: url(../../img/logo.svg) center center no-repeat;
     }
 
     .navigation {
@@ -55,7 +55,7 @@ header {
             right: 7px;
             width: 16px;
             height: 16px;
-            background: url(/img/search.svg)
+            background: url(../../img/search.svg)
         }
     }
 }
