--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -3,7 +3,7 @@
 @import'../scss/scss-component/main';
 
 body {
-    background: url(/img/background.jpg) center center no-repeat;
+    background: url(../../img/background.jpg) center center no-repeat;
 }
 .wrapper {
     display: flex;
