--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,6 +1,8 @@
 @import'../scss/scss-component/seting';
+@import'../scss/scss-component/variables';
 @import'../scss/scss-component/header';
 @import'../scss/scss-component/main';
+@import'../scss/scss-component/aside';
 
 body {
     background: url(../../img/background.jpg) center center no-repeat;
