--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -45,7 +45,7 @@ header {
   background: #FA8C16;
 }
 
-header .header--wrapper {
+header .header__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -70,7 +70,7 @@ header .navigation {
   margin-right: auto;
 }
 
-header .navigation .navigation--link a {
+header .navigation .navigation__link a {
   margin-right: 15px;
   font-size: calc(13px + 0.137vw);
   line-height: 22px;
@@ -78,11 +78,11 @@ header .navigation .navigation--link a {
   opacity: 0.9;
 }
 
-header .input--menu {
+header .input__menu {
   position: relative;
 }
 
-header .input--menu .input--text {
+header .input__menu .input__text {
   padding: 5px 30px 5px 12px;
   border-radius: 2px;
   border: 1px #d9d9d9 solid;
@@ -90,33 +90,240 @@ header .input--menu .input--text {
           box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.5);
 }
 
-header .input--menu .input--text::-webkit-input-placeholder {
+header .input__menu .input__text::-webkit-input-placeholder {
   font-size: calc(13px + 0.137vw);
   opacity: 50%;
 }
 
-header .input--menu .input--text:-ms-input-placeholder {
+header .input__menu .input__text:-ms-input-placeholder {
   font-size: calc(13px + 0.137vw);
   opacity: 50%;
 }
 
-header .input--menu .input--text::-ms-input-placeholder {
+header .input__menu .input__text::-ms-input-placeholder {
   font-size: calc(13px + 0.137vw);
   opacity: 50%;
 }
 
-header .input--menu .input--text::placeholder {
+header .input__menu .input__text::placeholder {
   font-size: calc(13px + 0.137vw);
   opacity: 50%;
 }
 
-header .input--menu .input--btn {
+header .input__menu .input__btn {
   position: absolute;
   top: 6px;
   right: 7px;
   width: 16px;
   height: 16px;
   background: url(../../img/search.svg);
+}
+
+main {
+  width: 100%;
+  background: #f5f5f5;
+}
+
+.main__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 34px 240px 33px 0;
+  background-color: #fff;
+  padding-bottom: 95px;
+}
+
+.main__post {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.post {
+  background: #fff;
+  border: 1px #f3f3f3 solid;
+}
+
+.post .post--container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 35px 36px 22px;
+  border-top: 1px #f3f3f3 solid;
+  border-right: 1px #f3f3f3 solid;
+}
+
+.post .post--container .post--title {
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+  font-size: calc(10px + 0.137vw);
+  color: #262626;
+}
+
+.post .post--container .post--content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.post .post--container .post--content .post--text {
+  font-family: 'Lato', sans-serif;
+  font-weight: normal;
+  font-size: calc(15px + 0.137vw);
+  color: #262626;
+  padding: 15px 0;
+}
+
+.post .post--container .hashtag {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.post .post--container .hashtag .hashtag__link {
+  margin-right: 10px;
+  font-family: 'Lato', sans-serif;
+  font-weight: normal;
+  font-size: calc(15px + 0.137vw);
+  color: #262626;
+  color: #bfbfbf;
+}
+
+.post .post--footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  padding: 0 36px;
+  background: rgba(229, 229, 229, 0.5);
+  border: 1px #e8e8e8 solid;
+}
+
+.post .post--footer .footer--functional {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.post .post--footer .footer--functional .functional__link {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 51px;
+}
+
+.post .post--footer .footer--functional .functional__link .functional__img {
+  width: 24px;
+  height: 24px;
+}
+
+.post .post--footer .footer__author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 13px 0;
+}
+
+.post .post--footer .footer__author .author--menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.post .post--footer .footer__author .author--menu .author--name {
+  font-family: 'Lato', sans-serif;
+  font-weight: normal;
+  font-size: calc(15px + 0.137vw);
+  color: #262626;
+  font-size: 12px;
+  text-align: end;
+  color: #8c8c8c;
+}
+
+.post .post--footer .footer__author .author--menu .author--activity {
+  font-family: 'Lato', sans-serif;
+  font-weight: normal;
+  font-size: calc(15px + 0.137vw);
+  color: #262626;
+  font-size: 12px;
+  color: #bfbfbf;
+}
+
+.post .post--footer .footer__author .author--icon {
+  width: 34px;
+  height: 34px;
+  margin-left: 9px;
+  background: url(../../img/avatar-comments.svg) center center no-repeat;
+}
+
+.post__bottom {
+  margin-top: 20px;
+}
+
+.functional__img--like {
+  background: url(../../img/like.svg) center center no-repeat;
+}
+
+.functional__img--like:after {
+  position: absolute;
+  top: 3px;
+  left: 25px;
+  content: '12';
+  font-family: 'Lato', sans-serif;
+  font-weight: normal;
+  font-size: calc(15px + 0.137vw);
+  color: #262626;
+  color: #8c8c8c;
+}
+
+.functional__img--comment {
+  background: url(../../img/comment.svg) center center no-repeat;
+}
+
+.functional__img--comment:after {
+  position: absolute;
+  top: 3px;
+  left: 25px;
+  content: '157';
+  font-family: 'Lato', sans-serif;
+  font-weight: normal;
+  font-size: calc(15px + 0.137vw);
+  color: #262626;
+  color: #8c8c8c;
+}
+
+.functional__img--save {
+  background: url(../../img/save.svg) center center no-repeat;
+}
+
+.functional__img--send {
+  background: url(../../img/send.svg) center center no-repeat;
 }
 
 body {
