--- a/style/scss/scss-component/_aside.scss
+++ b/style/scss/scss-component/_aside.scss
@@ -1,6 +1,7 @@
 aside {
 
     .aside-wrapper {
+        position: relative;
         display: flex;
         flex-direction: column;
         width: 370px;
@@ -42,6 +43,19 @@ aside {
             background-size: cover;
             border-radius: 50%;
         }
+
+        .profile__exit:hover {
+            width: 26px;
+            height: 26px;
+            box-shadow: 0px 0px 5px 2px #fa8c16;
+        };
+
+        .profile__exit:active {
+            transform: rotateZ(360deg);
+            transition: 0.2s;
+        }
+
+        ;
     }
 
     .profile__functional {
@@ -53,22 +67,39 @@ aside {
                 padding: 16px 16px 16px 48px;
                 background: #fff;
             }
+
+            :hover {
+                width: 100%;
+                text-align: start;
+                background: #FFFBE6;
+            }
+
+            :active {
+                color: #FAAD14;
+            }
         }
     }
 }
 
 .aside__btn {
     margin: 20px 0;
-    @include post-text;
     padding: 13px 16px 13px 36px;
     text-align: center;
+    @include post-text;
     color: #fff;
     background: #faad14;
     border-radius: 4px;
 }
 
 .aside__btn::after {
-
+    position: absolute;
+    top: 3px;
+    left: 25px;
+    width: 16px;
+    height: 16px;
+    content: ' ';
+    background: url(../../img/aside-fier.svg) center center no-repeat;
+    background-size: cover;//допиши позиционирование от дива(контейнера), который создаш кнопке //
 }
 
 .aside__comment {
