--- a/style/scss/scss-component/_media.scss
+++ b/style/scss/scss-component/_media.scss
@@ -46,6 +46,13 @@
     header .header__wrapper {
         width: 95%;
     }
+
+    aside {
+        right: 0px;
+        .aside-wrapper {
+            width: 300px;
+        }
+    }
 }
 
 @media (max-width: 610px) { //end iphone 6/7/8 Plus
